--- a/Backend/.env
+++ b/Backend/.env
@@ -1,4 +1,4 @@
 PORT=5000
-GROQ_API_KEY=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
-MONGO_URL=mongodb+srv://admin:Varlay%4026@cluster0.wuqpx2p.mongodb.net/smartlms?retryWrites=true&w=majority
+GROQ_API_KEY=  // your API KEY
+MONGO_URL=   // your Mongo_URL
 
